2008-02-27  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_check.erl: Separate config loading from
	configuration sanity checks (EJAB-533)
	* src/src/ejabberd_app.erl: Likewise
	* src/ejabberd_app.erl: Likewise
	
2008-02-26  Badlop  <badlop@process-one.net>

	* src/msgs/it.msg: Updated (thanks to Smart2128)

2008-02-21  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.0.txt: Small fixes and update date

2008-02-20  Badlop  <badlop@process-one.net>

	* README: Updated to match the content of the ejabberd Guide

	* doc/release_notes_2.0.0.txt: Updated version number and date

	* src/ejabberd.hrl: Updated version number
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/guide.html: Likewise
	* doc/version.tex: Likewise

	* doc/guide.tex: Mentioned the problems about Windows service
	* doc/guide.html: Likewise

	* src/msgs/ru.msg: Updated (thanks to Konstantin Khomoutov)
	* src/msgs/zh.msg: Updated (thanks to Mike Wang and Zhan Caibao)

2008-02-19  Badlop  <badlop@process-one.net>

	* src/msgs/ca.msg: Updated (thanks to Vicent Alberola Canet)
	* src/msgs/cs.msg: Updated (thanks to Lukas Polivka)
	* src/msgs/de.msg: Updated (thanks to Cord Beermann and Nikolaus
	Polak)
	* src/msgs/eo.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/es.msg: Updated
	* src/msgs/fr.msg: Updated (thanks to Christophe Romain)
	* src/msgs/gl.msg: Updated (thanks to Carlos E. Lopez)
	* src/msgs/nl.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/no.msg: Updated (thanks to Stian B. Barmen)
	* src/msgs/pt-br.msg: Updated (thanks to Otavio Fernandes)
	* src/msgs/uk.msg: Updated (thanks to Stoune and Ruslan Rakhmanin)
	
2008-02-19  Christophe Romain <christophe.romain@process-one.net>

	* src/odbc/ejabberd_odbc.erl: add pgsql driver monitoring

2008-02-19  Mickael Remond <mremond@process-one.net>

	* src/ejabberd_config.erl: dirty_get_registered_users now
	correctly returns all users for all vhosts no matter which